--- a/content/W6.html
+++ b/content/W6.html
@@ -2,6 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,10 +142,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W6.html'>Next</a> >> W6<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a></p>
-<p>(倉儲連結)</p>
-<br /> <a href='W6.html'>Next</a> >> W6</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>W6</h1>
+<p><img alt="" height="800" src="./../images/roc_flag_in_gd.png" width="1200"/></p>
+<p>利用Replit生成台灣國旗 , </p>
+<br />About << <a href='About.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
