--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,5 @@
 <h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a></p>
+<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a> 1</p>
 <p>(倉儲連結)</p>
 <h1>W6</h1>
 <p><img alt="" height="800" src="/images/roc_flag_in_gd.png" width="1200"/></p>
