--- a/content/About.html
+++ b/content/About.html
@@ -143,7 +143,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='W6.html'>Next</a> >> W6<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a></p>
+<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a> 1</p>
 <p>(倉儲連結)</p>
 <br /> <a href='W6.html'>Next</a> >> W6</div>
         
