更新排版 , 部分週期作業內容

--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='W6.html'>W6</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='W2~W5.html'>W2~W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,10 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W6.html'>Next</a> >> W6<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='W2~W5.html'>Next</a> >> W2~W5<br /><h1>About</h1>
 <p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a></p>
 <p>(倉儲連結)</p>
-<br /> <a href='W6.html'>Next</a> >> W6</div>
+<br /> <a href='W2~W5.html'>Next</a> >> W2~W5</div>
         
     <!-- footer -->
       <div class="container">
