--- a/content/W2~W5.html
+++ b/content/W2~W5.html
@@ -142,10 +142,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='W2~W5.html'>Next</a> >> W2~W5<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a></p>
-<p>(倉儲連結)</p>
-<br /> <a href='W2~W5.html'>Next</a> >> W2~W5</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>W2~W5</h1>
+<p></p>
+<br />About << <a href='About.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
