--- a/config/content.htm
+++ b/config/content.htm
@@ -134,7 +134,86 @@ void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, 
    }
 }</pre>
 <p><img alt="" height="200" src="/images/roc_flag_in_gd.png" width="300"/></p>
-<p><br/><br/>利用<span>C 與 gnuplot 及 gd 繪圖程式庫的結合以</span>生成台灣國旗以及美國國旗</p><h1>Brython</h1>
+<p>********************************************************</p>
+<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">void draw_usa_flag(gdImagePtr img);
+void draw_star(gdImagePtr img, int x, int y, int size, int color, double rotation_angle);
+
+int main() {
+    int width = 800;
+    int height = (int)(width / 1.9);
+
+    gdImagePtr img = gdImageCreateTrueColor(width, height);
+    gdImageAlphaBlending(img, 0);
+
+    draw_usa_flag(img);
+
+    FILE *outputFile = fopen("./../images/usa_flag.png", "wb");
+    if (outputFile == NULL) {
+        fprintf(stderr, "Error opening the output file.\n");
+        return 1;
+    }
+
+    gdImagePngEx(img, outputFile, 9);
+    fclose(outputFile);
+    gdImageDestroy(img);
+
+    return 0;
+}
+
+void draw_usa_flag(gdImagePtr img) {
+    int width = gdImageSX(img);
+    int height = gdImageSY(img);
+    int red, white, blue;
+    // Colors for the flag
+    red = gdImageColorAllocate(img, 178, 34, 52); // Red stripes
+    white = gdImageColorAllocate(img, 255, 255, 255); // White stripes
+    blue = gdImageColorAllocate(img, 60, 59, 110); // Blue field
+
+    int stripe_height = height / 13;
+    int stripe_width = width;
+    int star_size = (int)(0.0308 * height); // Corrected star size (half the original size)
+
+    for (int y = 0; y &lt; height; y += stripe_height) {
+        if (y / stripe_height % 2 == 0) {
+            gdImageFilledRectangle(img, 0, y, stripe_width, y + stripe_height, red);
+        } else {
+            gdImageFilledRectangle(img, 0, y, stripe_width, y + stripe_height, white);
+        }
+    }
+
+    gdImageFilledRectangle(img, 0, 0, width * 2 / 5, stripe_height * 7, blue);
+
+    int star_spacing_x = (int)(0.063 * height); // Horizontal spacing between stars
+    int star_spacing_y = (int)(0.054 * height); // Vertical spacing between stars
+    int star_start_x = (int)(0.0616 * height); // Starting X position for stars
+    int star_start_y = (int)(0.0485 * height); // Starting Y position for stars
+
+    for (int row = 0; row &lt; 9; row++) {
+        int starsPerRow = (row % 2 == 0) ? 6 : 5;
+
+        for (int star = 0; star &lt; starsPerRow; star++) {
+            int x = star_start_x + star * star_spacing_x;
+            int y = star_start_y + row * star_spacing_y;
+            draw_star(img, x, y, star_size, white);
+        }
+    }
+}
+
+void draw_star(gdImagePtr img, int x, int y, int size, int color) {
+    gdPoint points[10];
+
+    for (int i = 0; i &lt; 10; i++) {
+        double angle = M_PI / 2 + i * 2 * M_PI / 10;
+        int radius = (i % 2 == 0) ? size : size / 2;
+        points[i].x = x + radius * cos(angle);
+        points[i].y = y + radius * sin(angle);
+    }
+
+    // Fill the star with white color
+    gdImageFilledPolygon(img, points, 10, color);
+}</pre>
+<p><br/><br/><br/>利用<span>C 與 gnuplot 及 gd 繪圖程式庫的結合以</span>生成台灣國旗以及美國國旗</p>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
