--- a/config/content.htm
+++ b/config/content.htm
@@ -134,7 +134,8 @@ void draw_white_sun(gdImagePtr img, int center_x, int center_y, int sun_radius, 
    }
 }</pre>
 <p><img alt="" height="200" src="/images/roc_flag_in_gd.png" width="300"/></p>
-<p>********************************************************</p>
+<p>******************************************************</p>
+<p></p>
 <pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">void draw_usa_flag(gdImagePtr img);
 void draw_star(gdImagePtr img, int x, int y, int size, int color, double rotation_angle);
 
@@ -212,7 +213,7 @@ void draw_star(gdImagePtr img, int x, int y, int size, int color) {
     // Fill the star with white color
     gdImageFilledPolygon(img, points, 10, color);
 }</pre>
-<p><br/><br/><br/>利用<span>C 與 gnuplot 及 gd 繪圖程式庫的結合以</span>生成台灣國旗以及美國國旗</p>
+<p><img alt="" height="149" src="/images/usa.png" width="250"/><br/><br/><br/>利用<span>C 與 gnuplot 及 gd 繪圖程式庫的結合以</span>生成台灣國旗以及美國國旗</p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
