--- a/content/About.html
+++ b/content/About.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPV4網路設定.html'>IPV4網路設定</a></li></ul><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='IPV4網路設定.html'>Next</a> >> IPV4網路設定<br /><h1>About</h1>
-<p><a href="https://github.com/mdecycu/cmsite"> https://github.com/40823241a/cp2023</a></p>
-<p>(倉儲連結)</p>
-<br /> <a href='IPV4網路設定.html'>Next</a> >> IPV4網路設定</div>
+    <div id="tipue_search_content"> <a href='IPV4與IPV6網路設定&差異.html'>Next</a> >> IPV4與IPV6網路設定&差異<br /><h1>About</h1>
+<p><a href="https://40823241a.github.io/cp2023/content/index.html">個人網站</a></p>
+<p><a href="https://github.com/40823241a/cp2023">個人倉儲</a></p>
+<p></p>
+<br /> <a href='IPV4與IPV6網路設定&差異.html'>Next</a> >> IPV4與IPV6網路設定&差異</div>
         
     <!-- footer -->
       <div class="container">
