--- a/content/W6.html
+++ b/content/W6.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='About.html'>About</a><ul class='dropdown'><li><a href='IPV4網路設定.html'>IPV4網路設定</a></li></ul><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">IPV4網路設定 << <a href='IPV4網路設定.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
+    <div id="tipue_search_content">IPV4與IPV6網路設定&差異 << <a href='IPV4與IPV6網路設定&差異.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
 <p><span>C 程式練習二:</span></p>
 <p>1. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Go 類編譯方式執行.</p>
 <p>2. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Compile 編譯連結後取得 a.out, 然後在命令列中以 a.out 執行.</p>
@@ -208,7 +208,7 @@ int main() {
 <p>其中 -lncurses 會在連結階段導入所需的 ncurses 程式庫, 而 -lm 則導入 math.h 時連結數學程式庫之用.</p>
 <p>至於納入 gd 繪圖程式庫後的編譯連結指令為: cc gd_ex1.c -lgd -lm</p>
 <p>其中 -lgd 會在連結階段導入所需的 gd 程式庫, 而 -lm 則導入數學程式庫.</p>
-<br />IPV4網路設定 << <a href='IPV4網路設定.html'>Previous</a> <a href='W7.html'>Next</a> >> W7</div>
+<br />IPV4與IPV6網路設定&差異 << <a href='IPV4與IPV6網路設定&差異.html'>Previous</a> <a href='W7.html'>Next</a> >> W7</div>
         
     <!-- footer -->
       <div class="container">
