新增倉儲與網站評分項目:B

--- a/config/content.htm
+++ b/config/content.htm
@@ -116,7 +116,77 @@
 </ul>
 </li>
 </ol>
-<p><span style="color: #000080;"></span></p>
+<br/><span style="color: #000080;"></span>特定設定操作
+<p>我了解到 Replit、s.cycu.org 和 localhost 分別是三個不同情境下進行個人和分組倉庫設定操作的平台或環境。在這裡，我將提供一般性的指導，因為具體的設定可能取決於你使用的版本控制系統（例如Git）、編程語言和項目需求。</p>
+<h2>Replit</h2>
+<p>當在 Replit 上創建項目時，你可以進行個人和分組倉庫的相關設定。以下是詳細的步驟：</p>
+<p><strong>創建項目:</strong></p>
+<ol>
+<li>登錄到 Replit。</li>
+<li>點擊頁面右上角的 "Create" 按鈕，選擇創建一個新項目。</li>
+</ol>
+<p><strong>項目設置:</strong></p>
+<ol start="3">
+<li>在創建項目後，你會看到項目的主界面。在右上角可能有一個 "Settings" 或 "Project Settings" 按鈕，點擊它。</li>
+</ol>
+<p><strong>版本控制和倉庫設置:</strong></p>
+<ol start="4">
+<li>在項目設置中，你可能會找到與版本控制和倉庫相關的選項。</li>
+<li>你可以選擇使用版本控制系統，通常是 Git。</li>
+<li>設置遠程倉庫鏈接，可以選擇是 Replit 的倉庫還是連接到其他倉庫。</li>
+</ol>
+<p><strong>倉庫訪問權限:</strong></p>
+<ol start="7">
+<li>在設置中，你可能會找到有關倉庫訪問權限的選項。</li>
+<li>你可以設置倉庫是私有還是公共的。私有倉庫只能被特定用戶或協作團隊訪問，而公共倉庫對所有人都是可見的。</li>
+</ol>
+<p><strong>協作:</strong></p>
+<ol start="9">
+<li>如果你是與其他人協作，你可能還會找到協作相關的選項。</li>
+<li>可能有一些設置，允許其他用戶或團隊成員加入項目並共同編輯。</li>
+</ol>
+<h2><strong>S.cycu.org</strong></h2>
+<p>s.cycu.org 是中原大學（CYCU）的一個平台，用於項目管理和版本控制。以下有操作方式，可有助於理解在 s.cycu.org 上進行項目設定的過程：</p>
+<p><strong>登錄到 s.cycu.org 平台:</strong></p>
+<ol>
+<li>打開瀏覽器，並訪問 s.cycu.org。</li>
+<li>使用你的中原大學學生或項目賬戶登錄。</li>
+</ol>
+<p><strong>進入項目或倉庫頁面:</strong></p>
+<ol start="3">
+<li>登錄後，你可能會看到你的儀表板或項目列表。找到你要進行設定的具體項目，然後點擊進入該項目頁面。</li>
+</ol>
+<p><strong>尋找設置或管理選項:</strong></p>
+<ol start="4">
+<li>在項目頁面，尋找類似 "Settings"、"項目設置" 或 "管理" 的選項。通常，這些選項位於頁面的頂部導航欄或頁面側邊欄。</li>
+<li>如果你使用版本控制系統（例如Git），你可能會找到與倉庫設置和版本控制相關的選項。</li>
+</ol>
+<p><strong>版本控制和倉庫設置:</strong></p>
+<ol start="6">
+<li>在項目設置中，可能會有關於版本控制的設置，你可以設置遠程倉庫鏈接，配置分支策略等。</li>
+<li>你可能需要提供版本控制系統的憑證（例如Git倉庫的URL）。</li>
+</ol>
+<p><strong>訪問權限:</strong></p>
+<ol start="8">
+<li>在設置中，尋找與訪問權限相關的選項。你可能可以設置項目是私有還是公開的，以及定義誰可以訪問和編輯項目。</li>
+<li>確保按照項目需求進行正確的訪問權限設置。</li>
+</ol>
+<h2>Localhost</h2>
+<p><span>在本地開發環境（localhost）進行倉庫設置通常涉及使用版本控制系統，例如Git。以下是一般的步驟，以使用進行解釋：</span></p>
+<ol>
+<li>
+<p><strong>開啟終端機或命令行界面：</strong></p>
+<ul>
+<li>打開終端機（Terminal）或命令行界面，這是一個用戶與電腦系統互動的介面。</li>
+</ul>
+</li>
+<li>
+<p><strong>導航到你的本地項目目錄：</strong></p>
+<ul>
+<li>使用 <code>cd</code> 命令（變更目錄）進入你的本地項目目錄。例如：<br/><br/></li>
+</ul>
+</li>
+</ol>
 <h1>W6</h1>
 <p><span>C 程式練習二:</span></p>
 <p>1. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Go 類編譯方式執行.</p>
