--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -112,10 +112,11 @@
 <p><span style="color: #000080;"><strong>監視和維護：</strong></span></p>
 <ul>
 <li><span style="color: #000080;">監視IPv6流量，確保沒有未授權的設備使用你的IPv6地址。</span></li>
-<li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span></li>
+<li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span><span style="color: #000080;"></span></li>
 </ul>
 </li>
 </ol>
+<p><span style="color: #000080;"></span></p>
 <h1>W6</h1>
 <p><span>C 程式練習二:</span></p>
 <p>1. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Go 類編譯方式執行.</p>
