--- a/content/IPV4與IPV6網路設定&差異.html
+++ b/content/IPV4與IPV6網路設定&差異.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='IPV4與IPV6網路設定&差異.html'>IPV4與IPV6網路設定&差異</a><ul class='dropdown'><li><a href='Replit.html'>Replit</a><li><a href='S.cycu.org.html'>S.cycu.org</a><li><a href='Localhost.html'>Localhost</a></li></ul><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>IPV4與IPV6網路設定&差異</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit<br /><h1>IPV4與IPV6網路設定&差異</h1>
 <p>利用ChatGPT了解架構及相關資訊</p>
 <h4>IPV4</h4>
 <ol>
@@ -252,11 +252,13 @@ img.add_border {
 <p><span style="color: #000080;"><strong>監視和維護：</strong></span></p>
 <ul>
 <li><span style="color: #000080;">監視IPv6流量，確保沒有未授權的設備使用你的IPv6地址。</span></li>
-<li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span></li>
+<li><span style="color: #000080;">定期更新防火牆設定，確保IPv6網路的安全性。</span><span style="color: #000080;"></span></li>
 </ul>
 </li>
 </ol>
-<br />About << <a href='About.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<p><br/><span style="color: #000080;"></span>特定設定操作</p>
+<p>我了解到 Replit、s.cycu.org 和 localhost 分別是三個不同情境下進行個人和分組倉庫設定操作的平台或環境。在這裡，我將提供一般性的指導，因為具體的設定可能取決於你使用的版本控制系統（例如Git）、編程語言和項目需求。</p>
+<br />About << <a href='About.html'>Previous</a> <a href='Replit.html'>Next</a> >> Replit</div>
         
     <!-- footer -->
       <div class="container">
