--- a/content/Localhost.html
+++ b/content/Localhost.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,73 +142,71 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Localhost << <a href='Localhost.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
-<p><span>C 程式練習二:</span></p>
-<p>1. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Go 類編譯方式執行.</p>
-<p>2. 在可攜程式環境中以 SciTE + Tiny C Compiler 編譯系統, 使用 Tools - Compile 編譯連結後取得 a.out, 然後在命令列中以 a.out 執行.</p>
-<p>3. 在 Replit 全球資訊網 IDE 環境中的 Shell 頁面, 以 cc ex1.c 產生可執行檔案 a.out, 並以 ./a.out 執行, 或者以 cc ex1.c -o ex1 指定編譯連結後的可執行檔案名稱為 ex1 後, 以 ./ex1 執行.</p>
-<p>最後將所選擇的 C 程式範例執行過程與相關說明內容, 整理在<span>個人 github 帳號下的 cp2023 倉儲網頁</span>中的<span> </span><span>c_ex</span><span> </span>頁面</p>
-<p><a href="https://mde.tw/cpnote/downloads/gnuplot_ex1.c">gnuplot_ex1.c</a> 原始碼如下:</p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">// 包含標準輸出入程式庫的標頭文件
-// https://blog.csdn.net/weixin_38468077/article/details/101069365
-// http://www.gnuplot.info/demo/
-// https://github.com/sysprog21/rv32emu
-// https://github.com/sysprog21/semu 
-// https://docs.google.com/presentation/d/14N0cWG2SnBSqhc2cLF0_2VerB9FF8JN3
-// https://cs61c.org/fa23/
-// https://greenteapress.com/wp/think-python-2e/
-// https://github.com/ecalvadi/c99-examples
-// https://github.com/gouravthakur39/beginners-C-program-examples
-// https://github.com/ergenekonyigit/Numerical-Analysis-Examples
-// https://www.che.ncku.edu.tw/facultyweb/changct/html/teaching/CPPandMATLAB/Past/pdf%20Files/Chap02-Ling.pdf
-// https://gteceducation.com.sg/Brochures/PROGRAMMING/C%20PROGRAMMING%20FULL.pdf
-// https://jsommers.github.io/cbook/cbook.pdf
-// https://jsommers.github.io/cbook/index.html
-// http://student.itee.uq.edu.au/courses/csse2310/CProgrammingNotes.pdf
-// http://cslibrary.stanford.edu/101/EssentialC.pdf
-// https://publications.gbdirect.co.uk/c_book/
-// https://www.fossil-scm.org/fossil-book/doc/2ndEdition/fossilbook.pdf
-// ***** execute on replit 
-// cd downloads
-// cc gnuplot_ex1.c -o gnuplot_ex1
-// ./gnuplot_ex1
-#include &lt;stdio.h&gt;
-  
-// 主函式
-int main() {
-    // Start a Gnuplot process using popen
-    FILE *gnuplotPipe = popen("gnuplot -persistent", "w");
-    if (!gnuplotPipe) {
-        fprintf(stderr, "Failed to start Gnuplot.\n");
-        return 1;
-    }
-  
-    // Use Gnuplot plotting commands, specify font and output as PNG
-    fprintf(gnuplotPipe, "set terminal png font 'default,10' size 800,400\n");
-    fprintf(gnuplotPipe, "set output './../images/gnuplot_ex1.png'\n");
-    fprintf(gnuplotPipe, "plot sin(x)");
-    // Close popen
-    pclose(gnuplotPipe);
-  
-    return 0;
-}</pre>
-<p><span>執行結果位於 images:</span></p>
-<p style="top: 387.614px;"><img alt="" height="125" src="./../images/gnuplot_ex1.png" width="250"/></p>
-<p style="top: 387.614px;"></p>
-<p>前述 Replit 平台環境中, 已經加入 Gnuplot 繪圖程式庫, 若循相同設定, 在 replit.nix 中加入 gd 繪圖程式庫以及 ncurses 終端機圖形介面程式庫, 則可結合 C/C++ 進行各式靜態與動態繪圖練習:</p>
-<p>replit.nix</p>
-<pre class="brush:cpp;auto-links:false;toolbar:false" contenteditable="false">{ pkgs }: {
-    deps = [
-      pkgs.gnuplot
-      pkgs.ncurses.dev
-      pkgs.gd
-    ];
-}</pre>
-<p>納入 ncurses 後的 C 程式編譯連結指令為: cc ncurses_ex1.c -lncurses -lm</p>
-<p>其中 -lncurses 會在連結階段導入所需的 ncurses 程式庫, 而 -lm 則導入 math.h 時連結數學程式庫之用.</p>
-<p>至於納入 gd 繪圖程式庫後的編譯連結指令為: cc gd_ex1.c -lgd -lm</p>
-<p>其中 -lgd 會在連結階段導入所需的 gd 程式庫, 而 -lm 則導入數學程式庫.</p>
-<br />Localhost << <a href='Localhost.html'>Previous</a> <a href='W7.html'>Next</a> >> W7</div>
+    <div id="tipue_search_content">S.cycu.org << <a href='S.cycu.org.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>Localhost</h1>
+<p><span>在本地開發環境（localhost）進行倉庫設置通常涉及使用版本控制系統，例如Git。以下是一般的步驟，以使用進行解釋：</span></p>
+<ol>
+<li>
+<p><strong>打開終端或命令行界面:</strong></p>
+<ul>
+<li>打開你的電腦上的終端機（Terminal）或命令行界面，這取決於你使用的操作系統。</li>
+</ul>
+</li>
+<li>
+<p><strong>導航到你的本地項目目錄:</strong></p>
+<ul>
+<li>使用 <code>cd</code> 命令（改變目錄）導航到你的本地項目目錄。例如：
+<div class="bg-black rounded-md">
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span>cd /path/to/your/project<br/></span></div>
+</div>
+<img alt="" height="29" src="./../images/0001.png" width="200"/></li>
+</ul>
+</li>
+<li>
+<p><strong>使用命令行工具執行相關的倉庫設置:</strong></p>
+<ul>
+<li>如果尚未初始化 Git 倉庫，可以使用以下命令進行初始化：
+<div class="bg-black rounded-md">
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md">git init</div>
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span><img alt="" height="32" src="./../images/0002.png" width="200"/> </span></div>
+</div>
+</li>
+<li>如果已有遠程倉庫，可以使用以下命令添加遠程倉庫地址：
+<div class="bg-black rounded-md">
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md">git remote add origin &lt;remote_repository_url&gt;</div>
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md"><img alt="" height="28" src="./../images/0003.png" width="200"/></div>
+</div>
+</li>
+<li>如果需要配置使用者名稱和郵箱，可以使用以下命令：
+<div class="bg-black rounded-md">
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md">git config --global user.name "Your Name"<br/>git config --global user.email "your.email@example.com"</div>
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span><img alt="" height="38" src="./../images/0004.png" width="200"/></span></div>
+</div>
+</li>
+<li>其他可能的設置包括分支管理、忽略文件等，可以使用相應的 Git 命令完成設置。</li>
+</ul>
+</li>
+<li>
+<p><strong>提交更改和推送到遠程倉庫:</strong></p>
+<ul>
+<li>使用以下命令將更改添加到本地倉庫：
+<div class="bg-black rounded-md">
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md">git add .<br/>git commit -m "Commit message"</div>
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span><img alt="" height="38" src="./../images/0005.png" width="200"/></span></div>
+</div>
+</li>
+<li>如果是第一次推送，使用以下命令將更改推送到遠程倉庫：
+<div class="bg-black rounded-md">
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md">git push -u origin master</div>
+<div class="flex items-center relative text-gray-200 bg-gray-800 dark:bg-token-surface-primary px-4 py-2 text-xs font-sans justify-between rounded-t-md"><span><img alt="" height="29" src="./../images/00006.png" width="200"/></span></div>
+</div>
+</li>
+<li>其中，<code>master</code> 可能是你當前的主分支，根據你的設置可能會有所不同。</li>
+</ul>
+</li>
+</ol>
+<p>這些是一般的步驟，具體的命令和設置可能會因項目需求、團隊規範或個人偏好而有所不同。確保你熟悉你所使用版本控制系統的命令和文檔，以確保正確地配置和管理你的本地倉庫。</p>
+<p><br/><br/></p>
+<br />S.cycu.org << <a href='S.cycu.org.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
